--- a/index.html
+++ b/index.html
@@ -15,25 +15,24 @@
     </style>
    </head>
 
-   <body onload="drawBall()">
+   <body onload="draw()">
 
      <div class="gameboard-div">
        <canvas id="canvas" width="400" height="500"></canvas>
-
      </div>
 
      <script type="text/javascript" >
 
-       function drawBall() {
+       function draw() {
          var canvas = document.getElementById('canvas');
          var ctx = canvas.getContext('2d');
          var raf;
-         var gravity = 0.25;
+         var gravity = 0.14;
          var ball = {
            x: 200,
            y: 460,
            vx: 0,
-           vy: 14,
+           vy: 12,
            radius: 15,
            color: 'red',
            draw: function() {
@@ -44,23 +43,30 @@
              ctx.fill();
            }
          }
-         function redrawBall() {
+         function redraw() {
            ctx.clearRect(0,0, canvas.width, canvas.height);
            ball.vy += gravity;
            ball.x += ball.vx;
            ball.y += ball.vy;
            ball.draw();
-           ball.vy += 0.25;
+           ball.vy += 0.14;
+
+           // ball bounces off bottom of canvas
            if (ball.y + ball.vy > canvas.height || ball.y + ball.vy < 0) {
              ball.vy = -ball.vy;
            }
 
+
+
+
+           // ball wraps around to other side
            if (ball.x + ball.vx > canvas.width + 17) {
              ball.x = -17;
            } else if (ball.x + ball.vx < -17) {
              ball.x = canvas.width + 17;
            }
 
+           // ball slows down itself from horizontal movement
            if (ball.vx < -0.2) {
              ball.vx += 0.2;
            } else if (ball.vx > 0.2) {
@@ -69,17 +75,77 @@
              ball.vx = 0;
            }
 
-           raf = window.requestAnimationFrame(redrawBall);
+           raf = window.requestAnimationFrame(redraw);
+
+
+
+          //  ctx.fillRect(150, 400, 100, 20);
+          var boardHeight = 10;
+          var boardWidth = 95;
+          var ystart = canvas.height - boardHeight;
+          var xstart = (canvas.width-boardWidth)/2;
+          function drawBoard() {
+            this.ypos = ystart - 80;
+            this.xpos = xstart;
+            ctx.beginPath();
+            ctx.rect(this.xpos, this.ypos, boardWidth, boardHeight);
+            ctx.fillStyle = "#0095DD";
+            ctx.fill();
+            ctx.closePath();
+            if (ball.y > this.ypos - 15 &&
+            (ball.vy > 0)) {
+              if(ball.x > this.xpos && ball.x < this.xpos + boardWidth) {
+              ball.vy = -ball.vy ;
+              }
+            }
+          }
+          function drawBoard2(x, y) {
+            this.ypos = ystart - y;
+            this.xpos = xstart + x;
+            ctx.beginPath();
+            ctx.rect(this.xpos, this.ypos, boardWidth, boardHeight);
+            ctx.fillStyle = "#0095DD";
+            ctx.fill();
+            ctx.closePath();
+            if (ball.y > this.ypos - 15 &&
+            (ball.vy > 0)) {
+              if(ball.x > this.xpos && ball.x < this.xpos + boardWidth) {
+              ball.vy = -ball.vy ;
+              }
+            }
+          }
+
+          //  function drawBoard2() {
+          //    this.ypos = canvas.height-boardHeight - 80
+          //    ctx.beginPath();
+          //    ctx.rect(boardX + 50, this.ypos - 150, boardWidth, boardHeight);
+          //    ctx.fillStyle = "#0095DD";
+          //    ctx.fill();
+          //    ctx.closePath();
+          //  }
+
+           // ball bounces off boards
+          //  if (ball.y + ball.vy > canvas.height || ball.y + ball.vy < 0) {
+          //    ball.vy = -ball.vy;
+          //  }
+          // debugger
+
+          //  if (ball.y > canvas.height-boardHeight - 80 - 15 &&
+          //     (ball.vy > 0)) {
+          //     if(ball.x > boardX && ball.x < boardX + boardWidth) {
+          //         ball.vy = -ball.vy ;
+          //         // ball.y = canvas.height-boardHeight - 80;
+          //       }
+          //   }
+
+           drawBoard();
+           drawBoard2(100, 150);
+           drawBoard2(10, 250);
+
+
          }
 
-         raf = window.requestAnimationFrame(redrawBall);
-
-        //  canvas.addEventListener('mouseover', function(e) {
-        //  });
-
-        //  canvas.addEventListener('mouseout', function(e) {
-        //    window.cancelAnimationFrame(raf);
-        //  });
+         raf = window.requestAnimationFrame(redraw);
 
         window.addEventListener("keydown", moveBall, true);
 
@@ -95,9 +161,14 @@
               null;
           }
         }
-        ctx.fillRect(150, 400, 100, 100);
-      }
 
+        //  canvas.addEventListener('mouseover', function(e) {
+        //  });
+
+        //  canvas.addEventListener('mouseout', function(e) {
+        //    window.cancelAnimationFrame(raf);
+        //  });
+      }
      </script>
 
    </body>
