--- a/index.html
+++ b/index.html
@@ -13,73 +13,71 @@
       justify-content: center;
     }
     </style>
-   </head>
+  </head>
 
-   <body onload="draw()">
+  <body onload="draw()">
 
-     <div class="gameboard-div">
-       <canvas id="canvas" width="400" height="500"></canvas>
-     </div>
+    <div class="gameboard-div">
+      <canvas id="canvas" width="400" height="500"></canvas>
+    </div>
 
-     <script type="text/javascript" >
+    <script type="text/javascript" >
 
-       function draw() {
-         var canvas = document.getElementById('canvas');
-         var ctx = canvas.getContext('2d');
-         var raf;
-         var gravity = 0.14;
-         var ball = {
-           x: 200,
-           y: 460,
-           vx: 0,
-           vy: 12,
-           radius: 15,
-           color: 'red',
-           draw: function() {
-             ctx.beginPath();
-             ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2, true);
-             ctx.closePath();
-             ctx.fillStyle = this.color;
-             ctx.fill();
-           }
-         }
-         function redraw() {
-           ctx.clearRect(0,0, canvas.width, canvas.height);
-           ball.vy += gravity;
-           ball.x += ball.vx;
-           ball.y += ball.vy;
-           ball.draw();
-           ball.vy += 0.14;
+      function draw() {
+        var canvas = document.getElementById('canvas');
+        var ctx = canvas.getContext('2d');
+        var raf;
+        var gravity = 0.14;
+        var ball = {
+          x: 200,
+          y: 460,
+          vx: 0,
+          vy: 12,
+          radius: 15,
+          color: 'red',
+          draw: function() {
+            ctx.beginPath();
+            ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2, true);
+            ctx.closePath();
+            ctx.fillStyle = this.color;
+            ctx.fill();
+          }
+        }
+        function redraw() {
+          ctx.clearRect(0,0, canvas.width, canvas.height);
+          ball.vy += gravity;
+          ball.x += ball.vx;
+          ball.y += ball.vy;
+          ball.draw();
+          ball.vy += 0.14;
 
-           // ball bounces off bottom of canvas
-           if (ball.y + ball.vy > canvas.height || ball.y + ball.vy < 0) {
-             ball.vy = -ball.vy;
-           }
-
-
-
-
-           // ball wraps around to other side
-           if (ball.x + ball.vx > canvas.width + 17) {
-             ball.x = -17;
-           } else if (ball.x + ball.vx < -17) {
-             ball.x = canvas.width + 17;
-           }
-
-           // ball slows down itself from horizontal movement
-           if (ball.vx < -0.2) {
-             ball.vx += 0.2;
-           } else if (ball.vx > 0.2) {
-             ball.vx -= 0.2;
-           } else {
-             ball.vx = 0;
-           }
-
-           raf = window.requestAnimationFrame(redraw);
+         // ball bounces off bottom of canvas
+          if (ball.y + ball.vy > canvas.height || ball.y + ball.vy < 0) {
+            ball.vy = -ball.vy;
+          }
 
 
 
-          //  ctx.fillRect(150, 400, 100, 20);
+
+          // ball wraps around to other side
+          if (ball.x + ball.vx > canvas.width + 17) {
+            ball.x = -17;
+          } else if (ball.x + ball.vx < -17) {
+            ball.x = canvas.width + 17;
+          }
+
+          // ball slows down itself from horizontal movement
+          if (ball.vx < -0.2) {
+            ball.vx += 0.2;
+          } else if (ball.vx > 0.2) {
+            ball.vx -= 0.2;
+          } else {
+            ball.vx = 0;
+          }
+
+          raf = window.requestAnimationFrame(redraw);
+
+
           var boardHeight = 10;
           var boardWidth = 95;
           var ystart = canvas.height - boardHeight;
@@ -92,10 +90,11 @@
             ctx.fillStyle = "#0095DD";
             ctx.fill();
             ctx.closePath();
-            if (ball.y > this.ypos - 15 &&
-            (ball.vy > 0)) {
-              if(ball.x > this.xpos && ball.x < this.xpos + boardWidth) {
-              ball.vy = -ball.vy ;
+            if (ball.y > this.ypos - 15 && (ball.vy > 0)) {
+              if (ball.x > this.xpos && ball.x < this.xpos + boardWidth) {
+                if (ball.y < this.ypos) {
+                  ball.vy = -ball.vy ;
+                }
               }
             }
           }
@@ -107,45 +106,23 @@
             ctx.fillStyle = "#0095DD";
             ctx.fill();
             ctx.closePath();
-            if (ball.y > this.ypos - 15 &&
-            (ball.vy > 0)) {
-              if(ball.x > this.xpos && ball.x < this.xpos + boardWidth) {
-              ball.vy = -ball.vy ;
+            if (ball.y > this.ypos - 15 && (ball.vy > 0)) {
+              if(ball.x > this.xpos && ball.x < this.xpos +
+                boardWidth) {
+                  if (ball.y < this.ypos) {
+                    ball.vy = -ball.vy ;
+                }
               }
             }
           }
 
-          //  function drawBoard2() {
-          //    this.ypos = canvas.height-boardHeight - 80
-          //    ctx.beginPath();
-          //    ctx.rect(boardX + 50, this.ypos - 150, boardWidth, boardHeight);
-          //    ctx.fillStyle = "#0095DD";
-          //    ctx.fill();
-          //    ctx.closePath();
-          //  }
+          drawBoard();
+          drawBoard2(100, 150);
+          drawBoard2(10, 250);
 
-           // ball bounces off boards
-          //  if (ball.y + ball.vy > canvas.height || ball.y + ball.vy < 0) {
-          //    ball.vy = -ball.vy;
-          //  }
-          // debugger
+        }
 
-          //  if (ball.y > canvas.height-boardHeight - 80 - 15 &&
-          //     (ball.vy > 0)) {
-          //     if(ball.x > boardX && ball.x < boardX + boardWidth) {
-          //         ball.vy = -ball.vy ;
-          //         // ball.y = canvas.height-boardHeight - 80;
-          //       }
-          //   }
-
-           drawBoard();
-           drawBoard2(100, 150);
-           drawBoard2(10, 250);
-
-
-         }
-
-         raf = window.requestAnimationFrame(redraw);
+        raf = window.requestAnimationFrame(redraw);
 
         window.addEventListener("keydown", moveBall, true);
 
