--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     <div class="gameboard-div">
       <canvas id="canvas" width="400" height="500"></canvas>
     </div>
-    <script type="text/javascript" src="canvas.js">
-    </script>
-
+    <script type="text/javascript" src="canvas.js"></script>
 
    </body>
 </html>
