--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style media="screen">
     canvas {
       border: 2px solid blue;
+      background-color: #DAF3FF;
     }
     .gameboard-div {
       display: flex;
