--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     }
     .gameboard-div {
       display: flex;
-      justify-content: center;
+      /*justify-content: center;*/
+      background-image: url(./images/walle_gaze.jpg);
     }
     </style>
   </head>
