--- a/index.html
+++ b/index.html
@@ -3,24 +3,46 @@
   <head>
     <meta charset="utf-8">
     <title>Mouse Bounce</title>
-
     <style media="screen">
-    canvas {
-      border: 2px solid blue;
-      background-color: #DAF3FF;
-    }
-    .gameboard-div {
-      display: flex;
-      /*justify-content: center;*/
-      background-image: url(./images/walle_gaze.jpg);
-    }
+      html, body, canvas {
+        margin: 0;
+        padding: 0;
+      }
+      @media screen and (min-width: 1281px) {
+        canvas {
+          width: 500px;
+          height: 625px;
+          margin-right: 50px;
+        }
+      }
+      .master-div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-width: 1000px;
+      }
+      .gameboard-div {
+        position: absolute;
+        padding-right: 400px;
+      }
+      .background {
+        width: 100%;
+        height: 100%;
+      }
+      canvas {
+        border: 2px solid blue;
+        background-color: #88C1FF;
+      }
     </style>
   </head>
 
   <body>
 
-    <div class="gameboard-div">
-      <canvas id="canvas" width="400" height="500"></canvas>
+    <div class="master-div">
+      <img src="images/walle_gaze.jpg" class="background">
+      <div class="gameboard-div">
+        <canvas id="canvas" width="400" height="500"></canvas>
+      </div>
     </div>
     <script type="text/javascript" src="canvas.js"></script>
 
