--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Mouse Bounce</title>
+    <title>Wall-E Ball</title>
     <style media="screen">
       html, body, canvas {
         margin: 0;
@@ -12,6 +12,11 @@
         canvas {
           width: 500px;
           height: 625px;
+          margin-right: 50px;
+        }
+        .canvas-cover {
+          width: 505px;
+          height: 630px;
           margin-right: 50px;
         }
       }
@@ -33,18 +38,35 @@
         border: 2px solid blue;
         background-color: #88C1FF;
       }
+      .canvas-cover-div {
+        position: absolute;
+        padding-right: 400px;
+      }
+      .canvas-cover {
+        background-color: black;
+        opacity: 0.5;
+        height: 505px;
+        width: 405px;
+        margin-bottom: 3px;
+      }
     </style>
   </head>
 
   <body>
+    <script type="text/javascript" src="canvas.js"></script>
 
     <div class="master-div">
       <img src="images/walle_gaze.jpg" class="background">
+       <button type="button" name="button" onclick="start()">clickkkkkkkkkkkkkkk</button>
       <div class="gameboard-div">
-        <canvas id="canvas" width="400" height="500"></canvas>
+        <canvas id="canvas" width="400" height="500">
+        </canvas>
       </div>
+      <div class="canvas-cover-div" id="cover">
+        <div class="canvas-cover"></div>
+      </div>
+
     </div>
-    <script type="text/javascript" src="canvas.js"></script>
 
    </body>
 </html>
