--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Wall-E Ball</title>
     <link href="https://fonts.googleapis.com/css?family=Aldrich|Jockey+One" rel="stylesheet">
     <script src="https://use.fontawesome.com/56fa3834bd.js"></script>
-    <!-- font-family: 'Aldrich', sans-serif;
-    font-family: 'Jockey One', sans-serif; -->
     <style media="screen">
       html, body, canvas {
         margin: 0;
@@ -109,6 +108,10 @@
         position: absolute;
         font-family: 'Aldrich', sans-serif;
         margin-top: 150px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        line-height: 32px;
       }
       .buttons-div {
         display: flex;
@@ -203,8 +206,9 @@
         <div class="wall-e-story-div" id="wall-e-story" onclick="storyToggle()">
           Eve is in trouble, and she needs Wall-E's help! Eve's friends
           brought their spaceship, but it can't get near earth's surface.
-          Wall-E is going to have to use his ball and just keep bouncing
-          until he reaches it. Can you help him bounce his way up there?
+          BUT with his ball and his fire extinguisher, they can bounce
+          bounce him all the way to the ship! Can you help him bounce
+          and puff his way up there?
         </div>
         <div class="canvas-cover-div" id="cover">
           <div class="canvas-cover">
@@ -218,7 +222,9 @@
               press "ENTER" to play again
             </div>
             <div class="cover-message" id="message-win">
-              YOU DID IT! press "ENTER" to play again
+              <div>YOU DID IT!</div>
+              <div>press "ENTER" to keep</div>
+              <div>playing for a higher score!</div>
             </div>
           </div>
         </div>
