fix typo in mission

--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
           Eve is in trouble, and she needs Wall-E's help! Eve's friends
           brought their spaceship, but it can't get near earth's surface.
           BUT with his ball and his fire extinguisher, they can bounce
-          bounce him all the way to the ship! Can you help him bounce
-          and puff his way up there?
+          him all the way to the ship! Can you help him bounce and puff
+          his way up there?
         </div>
         <div class="canvas-cover-div" id="cover">
           <div class="canvas-cover">
