update links and resume

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <span class="title">
           Wall-E Ball
         </span>
-        <a href="http://dannam.xyz" class="name-link">
+        <a href="https://dannam.xyz" class="name-link">
         <span class="name">
           Daniel Nam
         </span>
@@ -243,13 +243,13 @@
           </div>
         </div>
         <div class="about-div">
-          <a href="http://github.com/dannam83" class="about">
+          <a href="https://github.com/dannam83" class="about">
             <i class="fa fa-github" aria-hidden="true"></i></a>
           <a href="https://www.linkedin.com/in/daniel-nam-4032a0b/" class="about">
             <i class="fa fa-linkedin" aria-hidden="true"></i></a>
           <a href="https://angel.co/daniel-nam-3?public_profile=1" class="about">
             <i class="fa fa-angellist" aria-hidden="true"></i></a>
-          <a href="images/resume.pdf" class="about">
+          <a href="https://dannam.xyz/images/resume.pdf" class="about">
             <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>
           <a href="mailto:dannam83@gmail.com" class="about">
             <i class="fa fa-envelope" aria-hidden="true"></i></a>
